--- a/params/glow_best.yaml
+++ b/params/glow_best.yaml
@@ -17,7 +17,7 @@ model_params: {dim_cond: [1,256,256], conv_size_cond: 3,
                layers_per_block: 4, #includes input and output layer, so 1 means no hidden layers
                dropout_fc: 0,
                permute: "random",     #random, soft, None
-               blocks_per_group:[8, 8, 8, 6],
+               blocks_per_group:[8, 8, 8, 4],
                clamping_per_group:[1.0, 1.0, 1.0, 0.6],
                kernel_size_per_group:[3, 3, [3, 1, 3, 1, 3, 1, 3, 1]],
                hidden_layers_per_group:[2, 2, 2, 2],
@@ -25,6 +25,7 @@ model_params: {dim_cond: [1,256,256], conv_size_cond: 3,
                act_norm: False
 }
 
+#half_precision: True
 model_name: "default"
 load_model: False
 architecture: "glow"
