--- a/params/glow_flickr.yaml
+++ b/params/glow_flickr.yaml
@@ -28,8 +28,8 @@ model_params: {dim_cond: [1,256,256], conv_size_cond: 3,
                decoder_sizes: [1, 2, 2, 2],
 }
 
-model_name: "glow_ae"
+model_name: "glow_flickr"
 load_model: False
 architecture: "glow"
-add_data: "/home/russell/flickr_data"
+add_data: "dataset/flickr_dataset"
 prob_data1: 0.01
